--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello!</title>
-    <meta name="description" content="description"/>
+    <meta name="description" content="description" />
     <meta name="author" content="author" />
     <meta name="keywords" content="keywords" />
     <link rel="stylesheet" href="./stylesheet.css" type="text/css" />
-    <style type="text/css">.body { width: auto; }</style>
-  </head>
-  <body>
+    <style type="text/css">
+        .body {
+            width: auto;
+        }
+    </style>
+</head>
 
-  </body>
+<body>
+    <h1>Un super titre !</h1>
+</body>
+
 </html>
