--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-DOCTYPE html>
 <html>
 
 <head>
@@ -16,7 +15,7 @@ DOCTYPE html>
 </head>
 
 <body>
-    <h1>Un super titre !</h1>
+    <h1>Un super titre 2!</h1>
 </body>
 
 </html>
